# regression_framework

./: .gitignore  ISSUES.md  NOTES.md  README.md  TODO.md  commands.xlsx  main.py  output.ipynb  pyproject.toml
control_scripts/: ctrl_boston.py  ctrl_insurance.py
data/: mock.csv
environment/: requirements.txt
exported_csv/: transformed_dataset_1
src/: ctrl_boston.py  ctrl_insurance.py  data_checks.py  data_loader.py  data_splitting.py  data_transformation.py  data_viewer.py  data_visualization.py  feature_selection.py  linear_regression.py  statistical_analysis.py  statistical_tests.py  test_code.ipynb  utils.py
support_docs/: p07 - Data Science - Predicting Insurance Costs Via Linear Regression (short version 2).ipynb  p07 - Data Science - Predicting Insurance Costs Via Linear Regression (short version).ipynb
